2022-09-19  Georg-Johann Lay  <avr@gjlay.de>

	Support 64-bit values in option -m MAXCOUNT.

	* options.c (get_valid_number): Return uint64_t.
	(parse_args): Adjust accordingly.
	* testavr.h (inttypes.h): Include it.
	(program_t) [max_insns, n_insns, n_cycles]: Turn to uint64_t.
	* avrtest.c (leave, execute): Adjust accordingly.
	* host.c (ticks_port_t) [n_insns, n_cycles]: Turn to uint64_t.
	(sys_ticks_cmd): Adjust to it.
	* perf.c (perf_start, perf_stop, perf_instruction): Adjust to
	new type of program.n_cycles, and program.n_insns.

2022-09-19  Georg-Johann Lay  <avr@gjlay.de>

        Introduce new command line option -flush that flushes the host's
        stdout stream in each call of avrtest_putchar (syscall 29).

        * options.def (AVRTEST_OPT) [flush]: New option.
        * options.c (USAGE) [-flush]: Document it.
        * avrtest.c (sys_stdout): Also log a "%c" version if the char that's
        just being printed provided it is isprint().

2020-01-15  Georg-Johann Lay  <avr@gjlay.de>

	Adjust copyright years.

2019-12-18  Georg-Johann Lay  <avr@gjlay.de>

	Make parallel builds work.

	* Makefile (exit-%.o, fileio-%.o): Use save-temps=obj instead
	of -save-temps.

2019-12-17  Georg-Johann Lay  <avr@gjlay.de>

	Support avrtest_cycles/insns/rand/prand also in avrtest.

	* logging.c (ticks_port_t, sys_ticks_cmd): Move to...
	* host.c (ticks_port_t, sys_ticks_cmd): ...here.
	Replace	calls to log_append by calls to lod_add.
	* host.h (sys_ticks_cmd): New proto.
	* avrtest.c (do_syscall) [sysno=4]: Call sys_ticks_cmd
	instead of do_syscall.

2019-12-16  Georg-Johann Lay  <avr@gjlay.de>

	Support printing 64-bit floating point values.

	* host.c (decode_avr_double): New function.
	* host.h (stdint.h): Include.
	(decode_avr_double): New proto.
	(avr_float_t) <mant,mant1>: Use uint64_t for these components.
	* logging.c (sys_log_dump) [what=LOG_D64_CMD]: Handle.
	(layout) <LOG_D64_CMD>: New element.
	* avrtest.h (LOG_D64_CMD): New enum.