@@ -1,3 +1,8 @@
+2023-05-19  Georg-Johann Lay  <avr@gjlay.de>
+
+	* load-flash.c (check_elf): New function.
+	(load_elf): Use it.
+
 2022-09-19  Georg-Johann Lay  <avr@gjlay.de>
 
 	Support 64-bit values in option -m MAXCOUNT.
